Modified the folder parameter from required parameters (now defaults to root for empty string)
